SERVER-8477 Remove extra return statement from DBException::toString()

Signed-off-by: Matt Kangas <matt.kangas@mongodb.com>